--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li><a href="#about">about</a></li>
+			<li><a href="#help">help</a></li>
+			<li><a href="#contact">contact</a></li>
+		</ul>
+	</nav>
+	<section>
+		<h1> 3 random audios</h1>
+		<audio controls><source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3"/></audio>
+		<audio controls><source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mp3"/></audio>
+		<audio controls><source src="demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3"/></audio>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
