--- a/main.html
+++ b/main.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Navigation and Audio</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<nav>
-		<ul>
-			<li><a href="#about">about</a></li>
-			<li><a href="#help">help</a></li>
-			<li><a href="#contact">contact</a></li>
-		</ul>
-	</nav>
-	<section>
-		<h1> 3 random audios</h1>
-		<audio controls><source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3"/></audio>
-		<audio controls><source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mp3"/></audio>
-		<audio controls><source src="demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3"/></audio>
-	</section>
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About Us</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <section id="audio">
+    <h2>3 random audios</h2>
+    <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
+      Your browser does not support the audio tag.
+    </audio>
+
+    <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+      Your browser does not support the audio tag.
+    </audio>
+
+    <audio controls>
+      <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
+      Your browser does not support the audio tag.
+    </audio>
+  </section>
 
 </body>
-
 </html>
